--- a/notebook/Text_Recognition_OCR.ipynb
+++ b/notebook/Text_Recognition_OCR.ipynb
@@ -46,7 +46,9 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import keras_ocr\n",
-        "import os"
+        "import os",
+        "import cv2",
+        "from utils import deskew"
       ],
       "metadata": {
         "id": "bMXM6PWe4cNc"
@@ -84,7 +86,8 @@
       "cell_type": "code",
       "source": [
         "# read image\n",
-        "list_image = [i for i in os.listdir() if \"tif\" in i]"
+        "img_path = \"./image"\"
+        "list_image = [os.path.join(img_path,i) for i in os.listdir(img_path) if \"tif\" in i]"
       ],
       "metadata": {
         "id": "GnMAJ6564tDj"
@@ -96,7 +99,7 @@
       "cell_type": "code",
       "source": [
         "# apply ocr into selected path\n",
-        "images = [keras_ocr.tools.read(path) for path in list_image]"
+        "images = [deskew(cv2.imread(path)) for path in list_image]"
       ],
       "metadata": {
         "id": "iqEohOvu5QAI"
