--- a/notebook/Text_Recognition_OCR.ipynb
+++ b/notebook/Text_Recognition_OCR.ipynb
@@ -86,7 +86,7 @@
       "cell_type": "code",
       "source": [
         "# read image\n",
-        "img_path = \"./image\"\n"
+        "img_path = \"./image\"\n",
         "list_image = [os.path.join(img_path,i) for i in os.listdir(img_path) if \"tif\" in i]"
       ],
       "metadata": {
